BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -12,7 +12,7 @@
   abstract = {The assessment of Enterprise Governance of IT (EGIT) frameworks and standards such as COBIT 5 and ISO 27001, when adopted simultaneously, implies an unreasonable effort because each framework and standard defines its own scope, definitions, and terminologies. Using these frameworks and standards independently prevents organizations from achieving the full benefits of EGIT since there are limitations on their application to specific Information Technology (IT) areas. Also, as these frameworks and standards overlap, at a time when organizations strive to be efficient and effective, it seems counterintuitive to be wasting resources by having different organizational departments handling both approaches independently. Thus, the primary goal of this paper is to facilitate the COBIT 5 and ISO 27001 simultaneous assessment. To reach this goal, an Enterprise Architecture (EA) metamodel representation of ISO 27001 and its mapping to COBIT 5 is proposed using ArchiMate as the EA modeling language. The ISO 27001 metamodel is also extended with ISO/IEC Technical Specification (TS) 33052 and ISO/IEC TS 33072 because these standards propose a Process Reference Model and a Process Assessment Model for Information Security management, which are essential models to assess ISO 27001 and COBIT 5 simultaneously. A field study was conducted in the Portuguese Navy regarding the COBIT 5 Manage Service Requests and Incidents process and its corresponding controls in ISO 27001 through the mapped ISO/ IEC TS 33052 processes.},
   isbn = {978-1-5386-7016-3},
   langid = {english},
-  note = {https://ieeexplore.ieee.org/document/8452659/},
+  note = {\url{https://ieeexplore.ieee.org/document/8452659/}},
   file = {/Users/werner/Zotero/storage/CACLPXU2/Almeida et al. - 2018 - A Model for Assessing COBIT 5 and ISO 27001 Simult.pdf}
 }
 
@@ -22,7 +22,7 @@
   year = {2023},
   month = feb,
   urldate = {2023-02-27},
-  howpublished = {https://www.sicherheitshandbuch.gv.at/},
+  howpublished = {\url{https://www.sicherheitshandbuch.gv.at/}},
   file = {/Users/werner/Zotero/storage/NYYLZETX/sicherheitshandbuch.pdf;/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
 }
 
@@ -32,7 +32,7 @@
   year = {2019},
   month = oct,
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM\_A\_7700-4\_2019\_10\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01}},
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
@@ -43,7 +43,7 @@
   edition = {9/2022},
   address = {{Bundeskanzleramt}},
   urldate = {2022-10-01},
-  howpublished = {https://www.nis.gv.at/}
+  howpublished = {\url{https://www.nis.gv.at/}}
 }
 
 @inproceedings{bondi_DSR_CharacteristicsScalabilityTheir2000,
@@ -60,7 +60,7 @@
   abstract = {Scalability is a desirable attribute of a network, system, or process. Poor scalability can result in poor system performance, necessitating the reengineering or duplication of systems. While scalability is valued, its characteristics and the characteristics that undermine it are usually only apparent from the context. Here, we attempt to define different aspects of scalability, such as structural scalability and load scalability. Structural scalability is the ability of a system to expand in a chosen dimension without major modifications to its architecture. Load scalability is the ability of a system to perform gracefully as the offered traffic increases. It is argued that systems with poor load scalability may exhibit it because they repeatedly engage in wasteful activity, because they are encumbered with poor scheduling algorithms, because they cannot fully take advantage of parallelism, or because they are algorithmically inefficient. We qualitatively illustrate these concepts with classical examples from the literature of operating systems and local area networks, as well as an example of our own. Some of these are accompanied by rudimentary delay analysis.},
   isbn = {978-1-58113-195-6},
   langid = {english},
-  note = {https://dl.acm.org/doi/10.1145/350391.350432},
+  note = {\url{https://dl.acm.org/doi/10.1145/350391.350432}},
   file = {/Users/werner/Zotero/storage/KCRIT59G/Bondi - 2000 - Characteristics of scalability and their impact on.pdf}
 }
 
@@ -78,7 +78,7 @@
   isbn = {978-3-030-46780-7 978-3-030-46781-4},
   langid = {english},
   keywords = {DSR},
-  note = {http://link.springer.com/10.1007/978-3-030-46781-4\_1}
+  note = {\url{http://link.springer.com/10.1007/978-3-030-46781-4_1}}
 }
 
 @misc{CISCSC,
@@ -86,7 +86,7 @@
   shorttitle = {{{CIS CSC V8}}},
   author = {{Center for Internet Security (CIS)}},
   year = {2021},
-  howpublished = {https://www.cisecurity.org/controls},
+  howpublished = {\url{https://www.cisecurity.org/controls}},
   file = {/Users/werner/Zotero/storage/EFU7FAFI/_.pdf}
 }
 
@@ -106,7 +106,7 @@
   urldate = {2023-03-13},
   abstract = {Validmeasurement scales for predicting user acceptance of computers are in short supply. Most subjective measures used in practice are unvalidated, and their relationship to system usage is unknown. The present research develops and validates new scales for two specific variables, perceived usefulness and perceived ease of use, which are hypothesized to be fundamental determinants of user acceptance. Definitionsfor these two variables were used to develop scale items thatwerepretested forcontent validityand then tested forreliability and construct validityin two studies involving a total of 152 users and four applicationprograms. Themeasures were refinedand streamlined, resultingin two six-itemscales withreliabilities of .98 for usefulness and .94 for ease of use. The scales exhibited high convergent, discriminanta,nd factoriavl alidityP. erceivedusefulnesswas significantlycorrelatedwithbothselfreported current usage (r=.63, Study 1) and self-predictedfutureusage (r=.85, Study2). Perceived ease of use was also significantlycorrelated withcurrentusage (r=.45, Study 1) and futureusage (r=.59, Study 2). In both studies, usefulness had a significantlygreater correlation withusage behaviorthan did ease of use. Regression analyses suggest that perceived ease of use may actually be a causal antecedent to perceived usefulness, as opposed to a parallel,direct determinantof system usage. Implicationsare drawn for futureresearch on user acceptance.},
   langid = {english},
-  note = {https://www.jstor.org/stable/249008?origin=crossref},
+  note = {\url{https://www.jstor.org/stable/249008?origin=crossref}},
   file = {/Users/werner/Zotero/storage/CSNGHF2F/Davis - 1989 - Perceived Usefulness, Perceived Ease of Use, and U.pdf}
 }
 
@@ -124,7 +124,7 @@
   abstract = {The EU NIS Directive introduces obligations related to the security of the network and information systems for Operators of Essential Services and for Digital Service Providers. Moreover, National Competent Authorities for cybersecurity are required to assess compliance with these obligations. This paper describes a novel Cybersecurity Maturity Assessment Framework (CMAF) that is tailored to the NIS Directive requirements. CMAF can be used either as a self-assessment tool from Operators of Essential Services and Digital Service Providers or as an audit tool from the National Competent Authorities for cybersecurity.},
   isbn = {978-1-72817-303-0},
   langid = {english},
-  note = {https://ieeexplore.ieee.org/document/9202470/},
+  note = {\url{https://ieeexplore.ieee.org/document/9202470/}},
   file = {/Users/werner/Zotero/storage/XKMFT8R8/Drivas et al. - 2020 - A NIS Directive Compliant Cybersecurity Maturity A.pdf}
 }
 
@@ -137,7 +137,7 @@
   journal = {ENISA},
   urldate = {2023-03-12},
   abstract = {This report presents the steps of an information security audit process for the OES compliance, as well as of a self-assessment/ management framework for the DSP security against the security requirements set by the NIS Directive. In addition, it provides an analysis of the most relevant information security standards and frameworks to support OES and DSP in practicing the above exercises in the most tailored and efficient manner.},
-  howpublished = {https://www.enisa.europa.eu/publications/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements},
+  howpublished = {\url{https://www.enisa.europa.eu/publications/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements}},
   langid = {english},
   file = {/Users/werner/Zotero/storage/CFK53ZJL/Guidelines on assessing DSP security and OES compl.pdf;/Users/werner/Zotero/storage/ZIJ6FHG9/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements.html}
 }
@@ -146,7 +146,7 @@
   title = {{{VERORDNUNG}} ({{EU}}) 2016/679 {{DES EUROP\"AISCHEN PARLAMENTS UND DES RATES}} Vom 27. {{April}} 2016 Zum {{Schutz}} Nat\"urlicher {{Personen}} Bei Der {{Verarbeitung}} Personenbezogener {{Daten}}, Zum Freien {{Datenverkehr}} Und Zur {{Aufhebung}} Der {{Richtlinie}} 95/46/{{EG}} ({{Datenschutz-Grundverordnung}})},
   author = {{European Parliament {and} the Council of the European Union}},
   urldate = {2023-03-17},
-  howpublished = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504\&from=DE},
+  howpublished = {\url{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE}},
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
@@ -156,7 +156,7 @@
   year = {2022},
   month = dec,
   urldate = {2023-04-27},
-  howpublished = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX\%3A32022L2555},
+  howpublished = {\url{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555}},
   annotation = {Usr\_lan: DE},
   file = {/Users/werner/Zotero/storage/C7RBJWPW/HTML.html}
 }
@@ -167,7 +167,7 @@
   year = {2016},
   month = jul,
   urldate = {2023-02-20},
-  howpublished = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
+  howpublished = {\url{http://data.europa.eu/eli/dir/2016/1148/oj/deu}},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
 }
@@ -178,7 +178,7 @@
   year = {2023},
   month = apr,
   urldate = {2023-04-26},
-  howpublished = {https://digital-strategy.ec.europa.eu/en/policies/nis2-directive},
+  howpublished = {\url{https://digital-strategy.ec.europa.eu/en/policies/nis2-directive}},
   langid = {english},
   file = {/Users/werner/Zotero/storage/R5HZI2J8/nis2-directive.html}
 }
@@ -205,7 +205,7 @@
   abstract = {The ISO/IEC 27001 standard has been adopted by worldwide organizations and companies. The main contribution of this paper is to systematically address all 21 requirements consisted of 7 mandatories and 14 categories in ISO/IEC 27001 standard when designing and developing information security management system (ISMS) policies. The PDCA model is adopted, and the statement of applicability is assessed. The 13 policies of ISMS are designed to address the individual requirement of ISO/IEC 27001 standard respectively and effectively.},
   isbn = {978-1-66546-722-3},
   langid = {english},
-  note = {https://ieeexplore.ieee.org/document/9672401/},
+  note = {\url{https://ieeexplore.ieee.org/document/9672401/}},
   file = {/Users/werner/Zotero/storage/UMSA5766/Guo et al. - 2021 - Enhance Enterprise Security through Implementing I.pdf}
 }
 
@@ -246,7 +246,7 @@
   author = {{ISO - International Organization for Standardization} and {IEC - International Electrotechnical Commission}},
   year = {2018},
   urldate = {2023-03-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM\_EN\_ISO\_19011\_2018\_11\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM_EN_ISO_19011_2018_11_01}},
   file = {/Users/werner/Zotero/storage/HXCY9CNQ/OENORM_EN_ISO_19011_2018_11_01.html}
 }
 
@@ -258,7 +258,7 @@
   doi = {10.1109/IEEESTD.2017.8016712},
   urldate = {2023-03-13},
   isbn = {9781504441186},
-  note = {https://ieeexplore.ieee.org/document/8016712/},
+  note = {\url{https://ieeexplore.ieee.org/document/8016712/}},
   file = {/Users/werner/Zotero/storage/A4PXYWWD/ISOIECIEEE International Standard - Systems and software engineering--Vocabulary.pdf}
 }
 
@@ -268,7 +268,7 @@
   year = {2022},
   month = may,
   urldate = {2023-02-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/676649/OEVE\_OENORM\_EN\_ISO\_IEC\_27000\_2020\_05\_15},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/676649/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15}},
   file = {/Users/werner/Zotero/storage/XAZA8XAU/OEVE_OENORM_EN_ISO_IEC_27000_2020_05_15.html}
 }
 
@@ -279,7 +279,7 @@
   year = {2017},
   month = jul,
   urldate = {2023-02-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE\_OENORM\_EN\_ISO\_IEC\_27001\_2017\_07\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/607098/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01}},
   file = {/Users/werner/Zotero/storage/KXYS9DTV/OEVE_OENORM_EN_ISO_IEC_27001_2017_07_01.html}
 }
 
@@ -291,7 +291,7 @@
   journal = {ISO},
   urldate = {2023-02-22},
   abstract = {IT security, cybersecurity and privacy protection are vital for companies and organizations today. The ISO/IEC 27000 family of standards keeps them safe.},
-  howpublished = {https://www.iso.org/isoiec-27001-information-security.html},
+  howpublished = {\url{https://www.iso.org/isoiec-27001-information-security.html}},
   langid = {english},
   file = {/Users/werner/Zotero/storage/EHEKQE2H/isoiec-27001-information-security.html}
 }
@@ -302,7 +302,7 @@
   year = {2022},
   month = aug,
   urldate = {2023-02-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE\_OENORM\_EN\_ISO\_IEC\_27002\_2022\_08\_15},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/719905/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15}},
   file = {/Users/werner/Zotero/storage/6FLYEYM4/OEVE_OENORM_EN_ISO_IEC_27002_2022_08_15.html}
 }
 
@@ -312,7 +312,7 @@
   year = {2020},
   month = nov,
   urldate = {2023-02-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE\_OENORM\_EN\_ISO\_IEC\_27011\_2020\_11\_15},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/686470/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15}},
   file = {/Users/werner/Zotero/storage/HBM6DKEU/OEVE_OENORM_EN_ISO_IEC_27011_2020_11_15.html}
 }
 
@@ -322,7 +322,7 @@
   year = {2020},
   month = jul,
   urldate = {2023-02-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE\_OENORM\_EN\_ISO\_IEC\_27019\_2020\_07\_15},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/679691/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15}},
   file = {/Users/werner/Zotero/storage/9BZAFMSL/OEVE_OENORM_EN_ISO_IEC_27019_2020_07_15.html}
 }
 
@@ -332,7 +332,7 @@
   year = {2016},
   month = dec,
   urldate = {2023-02-22},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM\_EN\_ISO\_27799\_2016\_12\_15},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15}},
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
 }
 
@@ -341,7 +341,7 @@
   author = {JUSLINE},
   urldate = {2023-03-17},
   abstract = {Artikel 35 Datenschutz-Folgenabsch\"atzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeitr\"age - JUSLINE \"Osterreich},
-  howpublished = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
+  howpublished = {\url{https://www.jusline.at/gesetz/dsgvo/paragraf/35}},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/VY4Q5TIK/35.html}
 }
@@ -350,7 +350,7 @@
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023 {{Version}} 3},
   author = {Kompetenzzentrum Sicheres {\"O}sterreich and Cyber Trust Austria},
   year = {2023},
-  howpublished = {https://cyberrisk-rating.at/cyberrisk-2023-schema-de.pdf},
+  howpublished = {\url{https://cyberrisk-rating.at/cyberrisk-2023-schema-de.pdf}},
   file = {/Users/werner/Zotero/storage/HJ2EJ2WY/cyberrisk-2023-schema-de.pdf}
 }
 
@@ -358,7 +358,7 @@
   title = {{Cyber Trust Austria - Kompetenzzentrum Sicheres \"Osterreich}},
   author = {Kompetenzzentrum Sicheres {\"O}sterreich},
   urldate = {2023-03-01},
-  howpublished = {https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/, https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/},
+  howpublished = {\url{https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/, https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/}},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
 }
@@ -377,7 +377,7 @@
   urldate = {2023-03-20},
   abstract = {The World Wide Web (WWW) or the Web has been recognized as a powerful new information exchange channel in recent years. Today, an ever-increasing number of businesses have set up Web sites to publicize their products and services. However, careful planning and preparation is needed to achieve the intended purpose of this new information exchange channel. This paper proposes a comprehensive framework for effective commercial Web application development based on prior research in hypermedia and human-computer interfaces. The framework regards Web application development as a special type of software development project. At the onset of the project, its social acceptability is investigated. Next, economic, technical, operational, and organizational viability are examined. For Web page design, both the functionality and usability of Web pages are thoroughly considered. The use of the framework should result in more effective commercial Web application development.},
   langid = {english},
-  note = {https://www.emerald.com/insight/content/doi/10.1108/10662249810211638/full/html},
+  note = {\url{https://www.emerald.com/insight/content/doi/10.1108/10662249810211638/full/html}},
   file = {/Users/werner/Zotero/storage/637PXELZ/Lu and Yeung - 1998 - A framework for effective commercial Web applicati.pdf}
 }
 
@@ -394,7 +394,7 @@
   issn = {15369323},
   doi = {10.17705/1jais.00144},
   urldate = {2023-03-20},
-  note = {https://aisel.aisnet.org/jais/vol8/iss11/34/},
+  note = {\url{https://aisel.aisnet.org/jais/vol8/iss11/34/}},
   file = {/Users/werner/Zotero/storage/WD4DWP2J/University of California, Irvine, USA et al. - 2007 - Boundary Objects in Design An Ecological View of .pdf}
 }
 
@@ -411,7 +411,7 @@
   year = {2018},
   month = feb,
   urldate = {2023-03-14},
-  howpublished = {https://ec.europa.eu/information\_society/newsroom/image/document/2018-30/reference\_document\_security\_measures\_0040C183-FF20-ECC4-A3D11FA2A80DAAC6\_53643.pdf},
+  howpublished = {\url{https://ec.europa.eu/information_society/newsroom/image/document/2018-30/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}},
   file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
 }
 
@@ -421,7 +421,7 @@
   author = {NIS Cooperation Group},
   journal = {ENISA},
   urldate = {2023-03-16},
-  howpublished = {https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services},
+  howpublished = {\url{https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services}},
   langid = {english},
   file = {/Users/werner/Zotero/storage/VKIMAL5X/minimum-security-measures-for-operators-of-essentials-services.html}
 }
@@ -430,7 +430,7 @@
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
   author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE\_EN\_50600-1\_2019\_09\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01}},
   file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
@@ -438,7 +438,7 @@
   title = {{{EN}} 50600-2-1:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-1: {{Geb\"audekonstruktion}}},
   author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE\_EN\_50600-2-1\_2021\_10\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01}},
   file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
 }
 
@@ -446,7 +446,7 @@
   title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
   author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE\_EN\_50600-2-2\_2019\_09\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01}},
   file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
 }
 
@@ -454,7 +454,7 @@
   title = {{{EN}} 50600-2-3:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-3: {{Regelung}} Der {{Umgebungsbedingungen}}},
   author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/661517/OVE\_EN\_50600-2-3\_2019\_09\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/661517/OVE_EN_50600-2-3_2019_09_01}},
   file = {/Users/werner/Zotero/storage/EAD2DP3A/OVE_EN_50600-2-3_2019_09_01.html}
 }
 
@@ -462,7 +462,7 @@
   title = {{{EN}} 50600-2-4:2015; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-4: {{Infrastruktur}} Der {{Telekommunikationsverkabelung}}},
   author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE\_OENORM\_EN\_50600-2-4\_2015\_08\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01}},
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
 }
 
@@ -470,7 +470,7 @@
   title = {{{EN}} 50600-2-5:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-5: {{Sicherungssysteme}}},
   author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   urldate = {2023-02-26},
-  howpublished = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE\_EN\_50600-2-5\_2021\_10\_01},
+  howpublished = {\url{https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01}},
   file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
@@ -498,7 +498,7 @@
   urldate = {2023-03-12},
   abstract = {Artifacts, such as software systems, pervade organizations and society. In the field of information systems (IS) they form the core of research. The evaluation of IS artifacts thus represents a major issue. Although IS research paradigms are increasingly intertwined, building and evaluating artifacts has traditionally been the purview of design science research (DSR). DSR in IS has not reached maturity yet. This is particularly true of artifact evaluation. This paper investigates the ``what'' and the ``how'' of IS artifact evaluation: what are the objects and criteria of evaluation, the methods for evaluating the criteria, and the relationships between the ``what'' and the ``how'' of evaluation? To answer these questions, we develop a taxonomy of evaluation methods for IS artifacts. With this taxonomy, we analyze IS artifact evaluation practice, as reflected by ten years of DSR publications in the basket of journals of the Association for Information Systems (AIS). This research brings to light important relationships between the dimensions of IS artifact evaluation, and identifies seven typical evaluation patterns: demonstration; simulation- and metricbased benchmarking of artifacts; practice-based evaluation of effectiveness; simulation- and metric-based absolute evaluation of artifacts; practice-based evaluation of usefulness or ease of use; laboratory, student-based evaluation of usefulness; and algorithmic complexity analysis. This study also reveals a focus of artifact evaluation practice on a few criteria. Beyond immediate usefulness, IS researchers are urged to investigate ways of evaluating the long-term organizational impact and the societal impact of artifacts.},
   langid = {english},
-  note = {http://www.tandfonline.com/doi/full/10.1080/07421222.2015.1099390},
+  note = {\url{http://www.tandfonline.com/doi/full/10.1080/07421222.2015.1099390}},
   file = {/Users/werner/Zotero/storage/2X82DQKR/Prat et al. - 2015 - A Taxonomy of Evaluation Methods for Information S.pdf}
 }
 
@@ -514,7 +514,7 @@
   title = {Verarbeitungsvorg\"ange, F\"ur Die Eine {{Datenschutz-Folgenabsch\"atzung}} Durchzuf\"uhren Ist ({{DSFA-V}})},
   author = {{Bundesministerium f{\"u}r Verfassung, Reformen, Deregulierung und Justiz}},
   urldate = {2023-03-17},
-  howpublished = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen\&Gesetzesnummer=20010375},
+  howpublished = {\url{https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010375}},
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
 }
 
@@ -524,8 +524,7 @@
   year = {2018},
   month = dec,
   urldate = {2023-02-20},
-  howpublished = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen\&Gesetzesnummer=20010536},
-  note = {\href{https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536}{https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen\&Gesetzesnummer=20010536}},
+  howpublished = {\url{https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536}},
   file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
 }
 
@@ -535,7 +534,7 @@
   year = {2019},
   month = jul,
   urldate = {2023-04-25},
-  howpublished = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen\&Gesetzesnummer=20010722},
+  howpublished = {\url{https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722}},
   file = {/Users/werner/Zotero/storage/83VZTAD2/GeltendeFassung.html}
 }
 
@@ -543,7 +542,7 @@
   title = {{{RIS}} - {{Verordnung}} \"Uber Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
   author = {{Rechtsinformationssystem des Bundes}},
   urldate = {2023-02-20},
-  howpublished = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen\&Gesetzesnummer=20010733},
+  howpublished = {\url{https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733}},
   file = {/Users/werner/Zotero/storage/W4ITLUX3/GeltendeFassung.html}
 }
 
@@ -561,7 +560,7 @@
   abstract = {This paper provides a high-level comparison between the National Institute of Standards and Technology's (NIST) Cyber Security Framework and the ISO 27001 Information Security Standard. Pros, cons and the advantages each framework holds over the other and how an organization would select an appropriate framework between CSF and ISO 27001 have been discussed along with a detailed comparison of how major security controls framework/guidelines like NIST SP 800-53, CIS Top-20 and ISO 27002 can be mapped back to each.},
   isbn = {978-1-72814-362-0},
   langid = {english},
-  note = {https://ieeexplore.ieee.org/document/9119914/},
+  note = {\url{https://ieeexplore.ieee.org/document/9119914/}},
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
 }
 
@@ -580,7 +579,7 @@
   abstract = {Evaluation is a central and essential activity in conducting rigorous Design Science Research (DSR), yet there is surprisingly little guidance about designing the DSR evaluation activity beyond suggesting possible methods that could be used for evaluation. This paper extends the notable exception of the existing framework of Pries-Heje et al [11] to address this problem. The paper proposes an extended DSR evaluation framework together with a DSR evaluation design method that can guide DSR researchers in choosing an appropriate strategy for evaluation of the design artifacts and design theories that form the output from DSR. The extended DSR evaluation framework asks the DSR researcher to consider (as input to the choice of the DSR evaluation strategy) contextual factors of goals, conditions, and constraints on the DSR evaluation, e.g. the type and level of desired rigor, the type of artifact, the need to support formative development of the designed artifacts, the properties of the artifact to be evaluated, and the constraints on resources available, such as time, labor, facilities, expertise, and access to research subjects. The framework and method support matching these in the first instance to one or more DSR evaluation strategies, including the choice of ex ante (prior to artifact construction) versus ex post evaluation (after artifact construction) and naturalistic (e.g., field setting) versus artificial evaluation (e.g., laboratory setting). Based on the recommended evaluation strategy(ies), guidance is provided concerning what methodologies might be appropriate within the chosen strategy(ies).},
   isbn = {978-3-642-29862-2 978-3-642-29863-9},
   langid = {english},
-  note = {http://link.springer.com/10.1007/978-3-642-29863-9\_31},
+  note = {\url{http://link.springer.com/10.1007/978-3-642-29863-9_31}},
   file = {/Users/werner/Zotero/storage/38TFSFAV/Venable et al. - 2012 - A Comprehensive Framework for Evaluation in Design.pdf}
 }
 
@@ -599,7 +598,7 @@
   urldate = {2023-03-13},
   abstract = {There has been a gigantic shift from a product based economy to one based on services, specifically digital services. From every indication it is likely to be more than a passing fad and the changes these emerging digital services represent will continue to transform commerce and have yet to reach market saturation. Digital services are being designed for and offered to users, yet very little is known about the design process that goes behind these developments. Is there a science behind designing digital services? By examining 12 leading digital services, we have developed a design taxonomy to be able to classify and contrast digital services. What emerged in the taxonomy were two broad dimensions; a set of fundamental design objectives and a set of fundamental service provider objectives. This paper concludes with an application of the proposed taxonomy to three leading digital services. We hope that the proposed taxonomy will be useful in understanding the science behind the design of digital services.},
   langid = {english},
-  note = {https://www.tandfonline.com/doi/full/10.1057/ejis.2008.38},
+  note = {\url{https://www.tandfonline.com/doi/full/10.1057/ejis.2008.38}},
   file = {/Users/werner/Zotero/storage/B6CAIT8C/Williams et al. - 2008 - Design of emerging digital services a taxonomy.pdf}
 }
 
@@ -608,7 +607,7 @@
   author = {Wirtschaftskammer Oesterreich},
   urldate = {2023-04-26},
   abstract = {Neue Regelungen f\"ur mehr Cybersicherheit in der EU},
-  howpublished = {https://www.wko.at/service/innovation-technologie-digitalisierung/nis2-uebersicht.html},
+  howpublished = {\url{https://www.wko.at/service/innovation-technologie-digitalisierung/nis2-uebersicht.html}},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/2MHDGIFD/nis2-uebersicht.html}
 }
