BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -17,7 +17,7 @@
 }
 
 @misc{ASIT_OEISHB,
-  title = {\"Osterreichisches {{Informationssicherheitshandbuch}}},
+  title = {\"Osterreichisches {{Informationssicherheitshandbuch}} ({{Version}} 4.3.3)},
   author = {{A-SIT} and Bundeskanzleramt},
   year = {2023},
   month = feb,
