BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -18,7 +18,7 @@
 
 @misc{ASIT_OEISHB,
   title = {\"Osterreichisches {{Informationssicherheitshandbuch}} ({{Version}} 4.3.3)},
-  author = {{A-SIT} and Bundeskanzleramt},
+  author = {Bundeskanzleramt and {A-SIT}},
   year = {2023},
   month = feb,
   urldate = {2023-02-27},
