BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -213,7 +213,6 @@
   title = {Design {{Science}} in {{Information Systems Research}}},
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
   year = {2004},
-  journal = {MIS Quarterly},
   series = {Management {{Information Systems Quarterly}}},
   volume = {28},
   pages = {75--105},
@@ -255,7 +254,6 @@
   title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
   author = {{ISO - International Organization for Standardization}},
   year = {2017},
-  journal = {ISO/IEC/IEEE 24765:2017(E)},
   pages = {1--541},
   doi = {10.1109/IEEESTD.2017.8016712},
   url = {https://ieeexplore.ieee.org/document/8016712/},
@@ -389,7 +387,7 @@
   author = {Mark, Gloria and Lyytinen, Kalle and Bergman, Mark},
   year = {2007},
   month = nov,
-  journal = {JAIS},
+  journal = {Journal of the Association for Information Systems},
   volume = {8},
   number = {11},
   pages = {546--568},
