BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -519,7 +519,7 @@
 }
 
 @misc{RISNetzUnd,
-  title = {Netz- Und {{Informationssystemsicherheitsgesetz}} \textendash{} {{NISG}} Und {{\"Anderung}} Des {{Telekommunikationsgesetzes}} 2003},
+  title = {Bundesgesetz Zur {{Gew\"ahrleistung}} Eines Hohen {{Sicherheitsniveaus}} von {{Netz-}} Und {{Informationssystemen}} ({{Netz-}} Und {{Informationssystemsicherheitsgesetz}} \textendash{} {{NISG}})},
   author = {Bundeskanzleramt},
   year = {2018},
   month = dec,
