BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -529,7 +529,7 @@
 }
 
 @misc{RISVerordnungUber,
-  title = {Netz- Und {{Informationssystemsicherheitsverordnung}} \textendash{} {{NISV}}},
+  title = {Verordnung Des {{Bundesministers}} F\"ur {{EU}}, {{Kunst}}, {{Kultur}} Und {{Medien}} Zur {{Festlegung}} von {{Sicherheitsvorkehrungen}} Und N\"aheren {{Regelungen}} Zu Den {{Sektoren}} Sowie Zu {{Sicherheitsvorf\"allen}} Nach Dem {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} ({{Netz-}} Und {{Informationssystemsicherheitsverordnung}} \textendash{} {{NISV}})},
   author = {Bundeskanzleramt},
   year = {2019},
   month = jul,
