--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -18,7 +18,7 @@
 
 @misc{ASIT_OEISHB,
   title = {\"Osterreichisches {{Informationssicherheitshandbuch}} ({{Version}} 4.3.3)},
-  author = {Bundeskanzleramt and {A-SIT}},
+  author = {Bundeskanzleramt and {A-SIT (Zentrum f{\"u}r sichere Informationstechnologie - Austria}},
   year = {2023},
   month = feb,
   url = {https://www.sicherheitshandbuch.gv.at/},
