BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -39,7 +39,8 @@
 @misc{BKA_BMI_NIS_Fact_Sheet_9/2022,
   title = {Sicherheitsma\ss nahmen F\"ur Betreiber Wesentlicher Dienste 09/2022 ("{{NIS Fact Sheet}} 9/2022")},
   author = {{Bundeskanzleramt und Bundesministerium f\"ur Inneres}},
-  year = {2019},
+  year = {2022},
+  month = sep,
   edition = {9/2022},
   address = {{Bundeskanzleramt}},
   url = {https://www.nis.gv.at/},
