BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -43,7 +43,7 @@
   month = sep,
   edition = {9/2022},
   address = {{Bundeskanzleramt}},
-  url = {https://www.nis.gv.at/},
+  url = {https://www.nis.gv.at/dam/jcr:bbe1c393-ba27-43b3-8d38-890610cfcc75/NIS_Factsheet_9_2022_1_0.pdf},
   urldate = {2022-10-01}
 }
 
