BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -514,6 +514,8 @@
 @misc{RIS_DSFAVerarbeitungsvorgangeFur,
   title = {Verordnung Der {{Datenschutzbeh\"orde}} \"Uber {{Verarbeitungsvorg\"ange}}, F\"ur Die Eine {{Datenschutz-Folgenabsch\"atzung}} Durchzuf\"uhren Ist ({{DSFA-V}})},
   author = {{Bundesministerium f{\"u}r Verfassung, Reformen, Deregulierung und Justiz}},
+  year = {2018},
+  month = nov,
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010375},
   urldate = {2023-03-17},
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
