--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -542,7 +542,7 @@
 }
 
 @misc{RISVerordnungUber_Quasten,
-  title = {{{RIS}} - {{Verordnung}} \"Uber Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  title = {Verordnung Des {{Bundesministers}} F\"ur {{Inneres}} Zur {{Festlegung}} Der {{Erfordernisse}} Und Besonderer {{Kriterien}} F\"ur Qualifizierte {{Stellen}} Nach Dem {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} ({{Verordnung}} \"Uber Qualifizierte {{Stellen}} \textendash{} {{QuaSteV}})},
   author = {{Rechtsinformationssystem des Bundes}},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
   urldate = {2023-02-20},
