BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -543,7 +543,7 @@
 
 @misc{RISVerordnungUber_Quasten,
   title = {Verordnung Des {{Bundesministers}} F\"ur {{Inneres}} Zur {{Festlegung}} Der {{Erfordernisse}} Und Besonderer {{Kriterien}} F\"ur Qualifizierte {{Stellen}} Nach Dem {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} ({{Verordnung}} \"Uber Qualifizierte {{Stellen}} \textendash{} {{QuaSteV}})},
-  author = {{Rechtsinformationssystem des Bundes}},
+  author = {{Bundesministerium f{\"u}r Inneres}},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
   urldate = {2023-02-20},
   file = {/Users/werner/Zotero/storage/W4ITLUX3/GeltendeFassung.html}
