--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -544,6 +544,8 @@
 @misc{RISVerordnungUber_Quasten,
   title = {Verordnung Des {{Bundesministers}} F\"ur {{Inneres}} Zur {{Festlegung}} Der {{Erfordernisse}} Und Besonderer {{Kriterien}} F\"ur Qualifizierte {{Stellen}} Nach Dem {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} ({{Verordnung}} \"Uber Qualifizierte {{Stellen}} \textendash{} {{QuaSteV}})},
   author = {{Bundesministerium f{\"u}r Inneres}},
+  year = {2019},
+  month = jul,
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
   urldate = {2023-02-20},
   file = {/Users/werner/Zotero/storage/W4ITLUX3/GeltendeFassung.html}
